--- a/MovieDatabase/package.json
+++ b/MovieDatabase/package.json
@@ -14,10 +14,14 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "^2.1.0",
     "@react-navigation/native": "^7.0.14",
     "expo": "~52.0.24",
+    "expo-calendar": "^14.0.6",
     "expo-font": "~13.0.2",
+    "expo-image-picker": "^16.0.4",
     "expo-linking": "~7.0.3",
+    "expo-notifications": "^0.29.12",
     "expo-router": "~4.0.16",
     "expo-splash-screen": "~0.29.19",
     "expo-status-bar": "~2.0.0",
